--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,9 +1,8 @@
 <h3>User</h3>
-<p>Name: <%= @user.name if @userer.name %></p>
-<p>Email: <%= @user.email if @userer.email %></p>
+<p>Name: <%= @user.name %></p>
+<p>Email: <%= @user.email %></p>
 
 <p>Personal Garden: </p>
 
 
 <p>Community Gardens: </p>
-<% end %>
