added name to form, commented out user profile garden rendering section

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -4,12 +4,16 @@
 <p>Email: <%= @user.email if @user.email %></p>
 
 <p>Personal Garden: </p>
-<% @trainer.gardens.each do |garden| %>
-<!-- <li class="name"><%= link_to 'Personal Garden', unknown_path %></li> -->
+<%# @trainer.gardens.each do |garden| %> 
+<!-- <li class="name"> -->
+	<%#= link_to 'Personal Garden', unknown_path %>
+<!-- </li>  -->
+<%# end %>
 
 <p>Community Gardens: </p>
-<% @trainer.gardens.each do |garden| %>
-<!--<li class="name"><%= link_to 'Community Garden', UNKNOWN_Path %></li> --> 
-
-<% end %>
+<%# @trainer.gardens.each do |garden| %> 
+<!-- <li class="name"> -->
+	<%#= link_to 'Community Garden', unknown_path %>
+<!-- </li>  -->
+<%# end %>
 
