--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -44,6 +44,9 @@
     </div>
   </div>
 </div>
+
+test :
+<% current_user.current_plant %>
 <%# @trainer.gardens.each do |garden| %> 
 <!-- <li class="name"> -->
 	<%#= link_to 'Community Garden', unknown_path %>
