--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -28,7 +28,7 @@
 <%# end %>
 
 <!-- <p>Community Gardens: </p> -->
-<div class="container">
+<!-- <div class="container">
   <div class="row">
     <h3>Community Gardens</h3>
     <div class="column">
@@ -43,7 +43,7 @@
       </table>
     </div>
   </div>
-</div>
+</div> -->
 
 test :
 <% current_user.current_plant %>
