finalize gardens, add routes for garden view

--- a/app/views/plants/new.html.erb
+++ b/app/views/plants/new.html.erb
@@ -1,3 +1,4 @@
+<br><br>
 <%= form_for @plant, url: plants_new_path do |f| %>
   <%#= f.radio_button :id, @plant.id %>
   <%#= f.label { image_tag("plant/#{1}.png") + f.radio_button } %>
@@ -5,7 +6,7 @@
   	<div style = "text-align:center">
 	  	<%= f.collection_radio_buttons(:ndex, (1..6).map {|ndex| [ndex, ndex]}, :first, :last) do |b| %>
 		  <div class="plants-choice-container">
-		    <%= b.label { image_tag("plants/#{b.text}.jpg") + b.radio_button } %> <br><br>
+		    <%= b.label { image_tag("plants/#{b.text}.jpg") + b.radio_button } %> <p> <br><br>
 		  </div>
 		<% end %> 
 	</div> <br>
