--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -34,11 +34,11 @@
     <div class="column">
       <table class="table">
         <tbody>
-          <% @community_gardens.each do |community_garden| %>
+          <#% @community_gardens.each do |community_garden| %>
             <tr>
               <%#= render community_garden %>
             </tr>
-          <% end %>
+          <#% end %>
         </tbody>
       </table>
     </div>
