fix errors to display garden

--- a/app/views/gardens/show.html.erb
+++ b/app/views/gardens/show.html.erb
@@ -1,7 +1,7 @@
 <h1>Your Garden</h1>
-#Trying to implement button for planting new plant
+<!-- Trying to implement button for planting new plant -->
 <table>
-  <% @plant.each do |p| %>
+  <% @plants.each do |p| %>
     <ul style="list-style-type:none">
       <li> Name: <%= p.name %></li>
       </ul>
