user profile finalizing

--- a/app/assets/stylesheets/override.scss
+++ b/app/assets/stylesheets/override.scss
@@ -9,5 +9,11 @@
 .top-bar .name a {
   font-weight: normal;
   color: white;
-  padding: 0 15px; }
+  padding: 0 15px; 
+}
+
+
+.profile-container {
+	margin:10px;
+}
 
