--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,25 +1,14 @@
 <div class="profile-container">
-  <h3>User</h3>
+  <h1>Hi <%= @user.name if @user.name %>!</h1>
 
-  <p>Name: <%= @user.name if @user.name %></p>
   <p>Email: <%= @user.email if @user.email %></p>
 
-  <!-- <p>Personal Garden: </p> -->
   <div class="container">
-    <div class="row">
-      <h3>Personal Gardens</h3>
-      <div class="column">
-        <table class="table">
-          <tbody>
-            <% @gardens.each do |garden| %>
-              <tr>
-                <%= render 'users/garden' %>
-              </tr>
-            <% end %>
-          </tbody>
-        </table>
-      </div>
-    </div>
+    <% @gardens.each do |garden| %>
+      <tr>
+        <%= render 'users/garden' %>
+      </tr>
+    <% end %>
   </div>
 
 </div>
