--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,3 +1,4 @@
 <div class="profile-container" style="text-align: center;">
 	<h1>Welcome to Garden!</h1>
+	<img src = "https://cdn.dribbble.com/users/1315300/screenshots/3556675/untitled-1.gif">
 </div>
