--- a/app/views/gardens/show.html.erb
+++ b/app/views/gardens/show.html.erb
@@ -1,9 +1,11 @@
+<div class="profile-container">
 <h1>Your Garden</h1>
 <!-- Trying to implement button for planting new plant -->
 <table>
   <% @plants.each do |p| %>
     <ul style="list-style-type:none">
-      <li> Name: <%= p.name %></li>
+      <li> Your plant: <% p.id %> </li>
       </ul>
   <% end %>
 </table>
+</div>
